tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__931004_11.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/931004-11.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn f(%arg0: s32i, %arg1: u24, %arg2: u24, %arg3: u24, %arg4: s64i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: u24, %arg2: u24, %arg3: u24, %arg4: s64i):
        %62 = alloca u24, "coerce", align 4
        store %arg3, %62
        %63 = cast(bitcast) %62 : rec_tiny*
        %64 = load %63 : rec_tiny
        %65 = alloca u24, "coerce", align 4
        store %arg2, %65
        %66 = cast(bitcast) %65 : rec_tiny*
        %67 = load %66 : rec_tiny
        %68 = alloca u24, "coerce", align 4
        store %arg1, %68
        %69 = cast(bitcast) %68 : rec_tiny*
        %70 = load %69 : rec_tiny
        %71 = alloca s32i, "n", align 4
        %72 = alloca rec_tiny, "x", align 1
        %73 = alloca rec_tiny, "y", align 1
        %74 = alloca rec_tiny, "z", align 1
        %75 = alloca s64i, "l", align 8
        store %arg0, %71
        store %70, %72
        store %67, %73
        store %64, %74
        store %arg4, %75
        scope {
            %128 = get_member %72[0] "c" : s8i*
            %129 = load %128 : s8i, align 1
            %130 = cast(integral) %129 : s32i
            %131 = const 10 : s32i
            %132 = cmp ne %130, %131 : bool
            if %132 {
                %133 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %122 = get_member %72[1] "d" : s8i*
            %123 = load %122 : s8i, align 1
            %124 = cast(integral) %123 : s32i
            %125 = const 20 : s32i
            %126 = cmp ne %124, %125 : bool
            if %126 {
                %127 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %116 = get_member %72[2] "e" : s8i*
            %117 = load %116 : s8i, align 1
            %118 = cast(integral) %117 : s32i
            %119 = const 30 : s32i
            %120 = cmp ne %118, %119 : bool
            if %120 {
                %121 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %110 = get_member %73[0] "c" : s8i*
            %111 = load %110 : s8i, align 1
            %112 = cast(integral) %111 : s32i
            %113 = const 11 : s32i
            %114 = cmp ne %112, %113 : bool
            if %114 {
                %115 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %104 = get_member %73[1] "d" : s8i*
            %105 = load %104 : s8i, align 1
            %106 = cast(integral) %105 : s32i
            %107 = const 21 : s32i
            %108 = cmp ne %106, %107 : bool
            if %108 {
                %109 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %98 = get_member %73[2] "e" : s8i*
            %99 = load %98 : s8i, align 1
            %100 = cast(integral) %99 : s32i
            %101 = const 31 : s32i
            %102 = cmp ne %100, %101 : bool
            if %102 {
                %103 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %92 = get_member %74[0] "c" : s8i*
            %93 = load %92 : s8i, align 1
            %94 = cast(integral) %93 : s32i
            %95 = const 12 : s32i
            %96 = cmp ne %94, %95 : bool
            if %96 {
                %97 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %86 = get_member %74[1] "d" : s8i*
            %87 = load %86 : s8i, align 1
            %88 = cast(integral) %87 : s32i
            %89 = const 22 : s32i
            %90 = cmp ne %88, %89 : bool
            if %90 {
                %91 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %80 = get_member %74[2] "e" : s8i*
            %81 = load %80 : s8i, align 1
            %82 = cast(integral) %81 : s32i
            %83 = const 32 : s32i
            %84 = cmp ne %82, %83 : bool
            if %84 {
                %85 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %76 = load %75 : s64i, align 8
            %77 = const 123 : s64i
            %78 = cmp ne %76, %77 : bool
            if %78 {
                %79 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca rec_tiny, "coerce", align 4
    %1 = alloca rec_tiny, "coerce", align 4
    %2 = alloca rec_tiny, "coerce", align 4
    %3 = alloca s32i, "__retval", align 4
    %4 = alloca rec_tiny[3], "x", align 1
    %5 = const 0 : s32i
    store %5, %3
    %6 = const 10 : s8i
    %7 = const 0 : s64i
    %8 = get_element %4[%7] : rec_tiny*
    %9 = get_member %8[0] "c" : s8i*
    store %6, %9, align 1
    %10 = const 11 : s8i
    %11 = const 1 : s64i
    %12 = get_element %4[%11] : rec_tiny*
    %13 = get_member %12[0] "c" : s8i*
    store %10, %13, align 1
    %14 = const 12 : s8i
    %15 = const 2 : s64i
    %16 = get_element %4[%15] : rec_tiny*
    %17 = get_member %16[0] "c" : s8i*
    store %14, %17, align 1
    %18 = const 20 : s8i
    %19 = const 0 : s64i
    %20 = get_element %4[%19] : rec_tiny*
    %21 = get_member %20[1] "d" : s8i*
    store %18, %21, align 1
    %22 = const 21 : s8i
    %23 = const 1 : s64i
    %24 = get_element %4[%23] : rec_tiny*
    %25 = get_member %24[1] "d" : s8i*
    store %22, %25, align 1
    %26 = const 22 : s8i
    %27 = const 2 : s64i
    %28 = get_element %4[%27] : rec_tiny*
    %29 = get_member %28[1] "d" : s8i*
    store %26, %29, align 1
    %30 = const 30 : s8i
    %31 = const 0 : s64i
    %32 = get_element %4[%31] : rec_tiny*
    %33 = get_member %32[2] "e" : s8i*
    store %30, %33, align 1
    %34 = const 31 : s8i
    %35 = const 1 : s64i
    %36 = get_element %4[%35] : rec_tiny*
    %37 = get_member %36[2] "e" : s8i*
    store %34, %37, align 1
    %38 = const 32 : s8i
    %39 = const 2 : s64i
    %40 = get_element %4[%39] : rec_tiny*
    %41 = get_member %40[2] "e" : s8i*
    store %38, %41, align 1
    %42 = const 3 : s32i
    %43 = const 0 : s64i
    %44 = get_element %4[%43] : rec_tiny*
    %45 = const 1 : s64i
    %46 = get_element %4[%45] : rec_tiny*
    %47 = const 2 : s64i
    %48 = get_element %4[%47] : rec_tiny*
    %49 = const 123 : s64i
    %50 = load %44 : rec_tiny, align 1
    %51 = load %46 : rec_tiny, align 1
    %52 = load %48 : rec_tiny, align 1
    store %50, %2
    %53 = cast(bitcast) %2 : u24*
    %54 = load %53 : u24
    store %51, %1
    %55 = cast(bitcast) %1 : u24*
    %56 = load %55 : u24
    store %52, %0
    %57 = cast(bitcast) %0 : u24*
    %58 = load %57 : u24
    call @f(%42, %54, %56, %58, %49) [all]
    %59 = get_global @exit : ((s32i) -> void)*
    %60 = const 0 : s32i
    call @exit(%60) [all]
    %61 = load %3 : s32i
    return %61
}
