tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__931004_13.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/931004-13.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn f(%arg0: s32i, %arg1: u32i, %arg2: u32i, %arg3: u32i, %arg4: s64i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: u32i, %arg2: u32i, %arg3: u32i, %arg4: s64i):
        %74 = alloca u32i, "coerce", align 4
        store %arg3, %74
        %75 = cast(bitcast) %74 : rec_tiny*
        %76 = load %75 : rec_tiny
        %77 = alloca u32i, "coerce", align 4
        store %arg2, %77
        %78 = cast(bitcast) %77 : rec_tiny*
        %79 = load %78 : rec_tiny
        %80 = alloca u32i, "coerce", align 4
        store %arg1, %80
        %81 = cast(bitcast) %80 : rec_tiny*
        %82 = load %81 : rec_tiny
        %83 = alloca s32i, "n", align 4
        %84 = alloca rec_tiny, "x", align 1
        %85 = alloca rec_tiny, "y", align 1
        %86 = alloca rec_tiny, "z", align 1
        %87 = alloca s64i, "l", align 8
        store %arg0, %83
        store %82, %84
        store %79, %85
        store %76, %86
        store %arg4, %87
        scope {
            %158 = get_member %84[0] "c" : s8i*
            %159 = load %158 : s8i, align 1
            %160 = cast(integral) %159 : s32i
            %161 = const 10 : s32i
            %162 = cmp ne %160, %161 : bool
            if %162 {
                %163 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %152 = get_member %84[1] "d" : s8i*
            %153 = load %152 : s8i, align 1
            %154 = cast(integral) %153 : s32i
            %155 = const 20 : s32i
            %156 = cmp ne %154, %155 : bool
            if %156 {
                %157 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %146 = get_member %84[2] "e" : s8i*
            %147 = load %146 : s8i, align 1
            %148 = cast(integral) %147 : s32i
            %149 = const 30 : s32i
            %150 = cmp ne %148, %149 : bool
            if %150 {
                %151 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %140 = get_member %84[3] "f" : s8i*
            %141 = load %140 : s8i, align 1
            %142 = cast(integral) %141 : s32i
            %143 = const 40 : s32i
            %144 = cmp ne %142, %143 : bool
            if %144 {
                %145 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %134 = get_member %85[0] "c" : s8i*
            %135 = load %134 : s8i, align 1
            %136 = cast(integral) %135 : s32i
            %137 = const 11 : s32i
            %138 = cmp ne %136, %137 : bool
            if %138 {
                %139 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %128 = get_member %85[1] "d" : s8i*
            %129 = load %128 : s8i, align 1
            %130 = cast(integral) %129 : s32i
            %131 = const 21 : s32i
            %132 = cmp ne %130, %131 : bool
            if %132 {
                %133 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %122 = get_member %85[2] "e" : s8i*
            %123 = load %122 : s8i, align 1
            %124 = cast(integral) %123 : s32i
            %125 = const 31 : s32i
            %126 = cmp ne %124, %125 : bool
            if %126 {
                %127 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %116 = get_member %85[3] "f" : s8i*
            %117 = load %116 : s8i, align 1
            %118 = cast(integral) %117 : s32i
            %119 = const 41 : s32i
            %120 = cmp ne %118, %119 : bool
            if %120 {
                %121 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %110 = get_member %86[0] "c" : s8i*
            %111 = load %110 : s8i, align 1
            %112 = cast(integral) %111 : s32i
            %113 = const 12 : s32i
            %114 = cmp ne %112, %113 : bool
            if %114 {
                %115 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %104 = get_member %86[1] "d" : s8i*
            %105 = load %104 : s8i, align 1
            %106 = cast(integral) %105 : s32i
            %107 = const 22 : s32i
            %108 = cmp ne %106, %107 : bool
            if %108 {
                %109 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %98 = get_member %86[2] "e" : s8i*
            %99 = load %98 : s8i, align 1
            %100 = cast(integral) %99 : s32i
            %101 = const 32 : s32i
            %102 = cmp ne %100, %101 : bool
            if %102 {
                %103 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %92 = get_member %86[3] "f" : s8i*
            %93 = load %92 : s8i, align 1
            %94 = cast(integral) %93 : s32i
            %95 = const 42 : s32i
            %96 = cmp ne %94, %95 : bool
            if %96 {
                %97 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %88 = load %87 : s64i, align 8
            %89 = const 123 : s64i
            %90 = cmp ne %88, %89 : bool
            if %90 {
                %91 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca rec_tiny, "coerce", align 4
    %1 = alloca rec_tiny, "coerce", align 4
    %2 = alloca rec_tiny, "coerce", align 4
    %3 = alloca s32i, "__retval", align 4
    %4 = alloca rec_tiny[3], "x", align 1
    %5 = const 0 : s32i
    store %5, %3
    %6 = const 10 : s8i
    %7 = const 0 : s64i
    %8 = get_element %4[%7] : rec_tiny*
    %9 = get_member %8[0] "c" : s8i*
    store %6, %9, align 1
    %10 = const 11 : s8i
    %11 = const 1 : s64i
    %12 = get_element %4[%11] : rec_tiny*
    %13 = get_member %12[0] "c" : s8i*
    store %10, %13, align 1
    %14 = const 12 : s8i
    %15 = const 2 : s64i
    %16 = get_element %4[%15] : rec_tiny*
    %17 = get_member %16[0] "c" : s8i*
    store %14, %17, align 1
    %18 = const 20 : s8i
    %19 = const 0 : s64i
    %20 = get_element %4[%19] : rec_tiny*
    %21 = get_member %20[1] "d" : s8i*
    store %18, %21, align 1
    %22 = const 21 : s8i
    %23 = const 1 : s64i
    %24 = get_element %4[%23] : rec_tiny*
    %25 = get_member %24[1] "d" : s8i*
    store %22, %25, align 1
    %26 = const 22 : s8i
    %27 = const 2 : s64i
    %28 = get_element %4[%27] : rec_tiny*
    %29 = get_member %28[1] "d" : s8i*
    store %26, %29, align 1
    %30 = const 30 : s8i
    %31 = const 0 : s64i
    %32 = get_element %4[%31] : rec_tiny*
    %33 = get_member %32[2] "e" : s8i*
    store %30, %33, align 1
    %34 = const 31 : s8i
    %35 = const 1 : s64i
    %36 = get_element %4[%35] : rec_tiny*
    %37 = get_member %36[2] "e" : s8i*
    store %34, %37, align 1
    %38 = const 32 : s8i
    %39 = const 2 : s64i
    %40 = get_element %4[%39] : rec_tiny*
    %41 = get_member %40[2] "e" : s8i*
    store %38, %41, align 1
    %42 = const 40 : s8i
    %43 = const 0 : s64i
    %44 = get_element %4[%43] : rec_tiny*
    %45 = get_member %44[3] "f" : s8i*
    store %42, %45, align 1
    %46 = const 41 : s8i
    %47 = const 1 : s64i
    %48 = get_element %4[%47] : rec_tiny*
    %49 = get_member %48[3] "f" : s8i*
    store %46, %49, align 1
    %50 = const 42 : s8i
    %51 = const 2 : s64i
    %52 = get_element %4[%51] : rec_tiny*
    %53 = get_member %52[3] "f" : s8i*
    store %50, %53, align 1
    %54 = const 3 : s32i
    %55 = const 0 : s64i
    %56 = get_element %4[%55] : rec_tiny*
    %57 = const 1 : s64i
    %58 = get_element %4[%57] : rec_tiny*
    %59 = const 2 : s64i
    %60 = get_element %4[%59] : rec_tiny*
    %61 = const 123 : s64i
    %62 = load %56 : rec_tiny, align 1
    %63 = load %58 : rec_tiny, align 1
    %64 = load %60 : rec_tiny, align 1
    store %62, %2
    %65 = cast(bitcast) %2 : u32i*
    %66 = load %65 : u32i
    store %63, %1
    %67 = cast(bitcast) %1 : u32i*
    %68 = load %67 : u32i
    store %64, %0
    %69 = cast(bitcast) %0 : u32i*
    %70 = load %69 : u32i
    call @f(%54, %66, %68, %70, %61) [all]
    %71 = get_global @exit : ((s32i) -> void)*
    %72 = const 0 : s32i
    call @exit(%72) [all]
    %73 = load %3 : s32i
    return %73
}
